# JAERO

./: .gitignore  LICENSE  README.md  basestationlinks  building.txt  ci-create-basestation.sh  ci-linux-build.sh  ci-linux-create-basestation.sh  ci-windows-build.sh  linux_remove.sh  pi-build.sh  test.sh
JAERO/: .gitignore  .qmake.stash  DSP.cpp  DSP.h  JAERO.desktop  JAERO.pro  LICENSE  acarsitem_converter.cpp  acarsitem_converter.h  aerol.cpp  aerol.h  arincparse.cpp  arincparse.h  audioburstmskdemodulator.cpp  audioburstmskdemodulator.h  audioburstoqpskdemodulator.cpp  audioburstoqpskdemodulator.h  audiodiskwriter.cpp  audiodiskwriter.h  audiomskdemodulator.cpp  audiomskdemodulator.h  audiooqpskdemodulator.cpp  audiooqpskdemodulator.h  audiooutdevice.cpp  audiooutdevice.h  audioreceiver.cpp  audioreceiver.h  burstmskdemodulator.cpp  burstmskdemodulator.h  burstoqpskdemodulator.cpp  burstoqpskdemodulator.h  coarsefreqestimate.cpp  coarsefreqestimate.h  compressedaudiodiskwriter.cpp  compressedaudiodiskwriter.h  databasetext.cpp  databasetext.h  downloadmanager.cpp  downloadmanager.h  fftrwrapper.cpp  (+36 more)
JDDS-Arduino/: JDDS-Arduino.pro  readme.md
JMSK/: DSP.cpp  JMSK.pro  aerol.cpp  aerol.h  audiomskdemodulator.cpp  audiomskmodulator.cpp  audiomskmodulator.h  beaconhandler.cpp  beaconhandler.h  coarsefreqestimate.cpp  coarsefreqestimate.h  fftrwrapper.h  fftwrapper.cpp  jmsk.qrc  jmsk.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mskdemodulator.cpp  mskdemodulator.h  mskmodulator.cpp  mskmodulator.h  serialppt.cpp  serialppt.h  textreplacement.cpp  textreplacement.h  varicodepipedecoder.cpp  varicodepipeencoder.cpp  varicodewrapper.cpp  varicodewrapper.h  webscraper.cpp  webscraper.h
kiss_fft130/: kiss_fastfir.c  kiss_fastfir.h
libacars/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
libacars-1.1.0/: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
libacars-1.1.0/doc/: API_REFERENCE.md  PROG_GUIDE.md
libacars-1.1.0/src/: CMakeLists.txt
libacars-1.1.0/src/examples/: CMakeLists.txt  adsc_get_position.c  cpdlc_get_position.c  decode_arinc.c  media_advisory.c
libacars-1.1.0/src/libacars/: CMakeLists.txt  acars.c  acars.h  adsc.c  adsc.h  arinc.c  arinc.h  asn1-format-common.c  asn1-format-common.h  asn1-format-cpdlc.c  asn1-format-cpdlc.h  asn1-util.c  asn1-util.h  bitstream.c  bitstream.h  cpdlc.c  cpdlc.h  crc.c  crc.h  libacars.c  libacars.h  libacars.pc.in  list.c  list.h  macros.h  media-adv.c  media-adv.h  symversions.ldscript  util.c  util.h  version.cmake  version.h  vstring.c  vstring.h
libacars-1.1.0/src/libacars/asn1/: FANSATCDownlinkMessage.h  FANSATCDownlinkMsgElementId.c  FANSATCDownlinkMsgElementIdSequence.c  FANSATCDownlinkMsgElementIdSequence.h  FANSATCMessageHeader.c  FANSATCUplinkMessage.h  FANSATCUplinkMsgElementId.h  FANSATCUplinkMsgElementIdSequence.c  FANSATCUplinkMsgElementIdSequence.h  FANSATISCode.c  FANSATWAlongTrackWaypoint.c  FANSATWAlongTrackWaypoint.h  FANSATWAlongTrackWaypointSequence.c  FANSATWAltitudeSequence.c  FANSATWAltitudeSequence.h  FANSATWAltitudeTolerance.c  FANSATWAltitudeTolerance.h  FANSATWDistance.c  FANSATWDistance.h  FANSAircraftFlightIdentification.c  FANSAircraftFlightIdentification.h  FANSAircraftType.c  FANSAircraftType.h  FANSAirport.c  FANSAirport.h  FANSAirwayIdentifier.c  FANSAltimeter.c  FANSAltimeterEnglish.c  FANSAltitude.c  FANSAltitudeFlightLevel.c  FANSAltitudeFlightLevelMetric.c  FANSAltitudeGNSSFeet.h  FANSAltitudeGNSSMeters.c  FANSAltitudeGNSSMeters.h  FANSAltitudePosition.h  FANSAltitudeQNH.c  FANSAltitudeRestriction.c  FANSAltitudeTime.c  FANSAltitudeTime.h  FANSBeaconCode.c  (+184 more)
libacars-1.1.0/src/libacars/asn1/patches/: CHOICE_expose__fetch_present_idx.diff  asn_fprint_parameterized_indentation.diff  asn_system_h_default_source.diff  quoted_includes.diff
libacars/src/examples/: CMakeLists.txt  adsc_get_position.c  cpdlc_get_position.c  decode_arinc.c
libacars/src/libacars/: CMakeLists.txt  acars.c  acars.h  adsc.c  adsc.h  arinc.c  arinc.h  asn1-format-common.c  asn1-format-common.h  asn1-format-cpdlc.c  asn1-format-cpdlc.h  asn1-util.c  asn1-util.h  bitstream.c  bitstream.h  cpdlc.c  cpdlc.h  crc.c  crc.h  libacars.c  libacars.h  libacars.pc.in  list.c  list.h  macros.h  symversions.ldscript  util.c  util.h  version.h.in  vstring.c  vstring.h
libacars/src/libacars/asn1/: CMakeLists.txt  FANSATCDownlinkMessage.c  FANSATCDownlinkMsgElementId.h  FANSATCMessageHeader.h  FANSATCUplinkMessage.c  FANSATCUplinkMsgElementId.c  FANSATISCode.h  FANSATWAlongTrackWaypointSequence.h  FANSATWAltitude.c  FANSATWAltitude.h  FANSATWDistanceTolerance.c  FANSATWDistanceTolerance.h  FANSAircraftEquipmentCode.c  FANSAircraftEquipmentCode.h  FANSAirportDeparture.c  FANSAirportDeparture.h  FANSAirportDestination.c  FANSAirportDestination.h  FANSAirwayIdentifier.h  FANSAirwayIntercept.c  FANSAirwayIntercept.h  FANSAltimeter.h  FANSAltimeterEnglish.h  FANSAltimeterMetric.c  FANSAltimeterMetric.h  FANSAltitude.h  FANSAltitudeAltitude.c  FANSAltitudeAltitude.h  FANSAltitudeFlightLevel.h  FANSAltitudeFlightLevelMetric.h  FANSAltitudeGNSSFeet.c  FANSAltitudePosition.c  FANSAltitudeQFE.c  FANSAltitudeQFE.h  FANSAltitudeQFEMeters.c  FANSAltitudeQFEMeters.h  FANSAltitudeQNH.h  FANSAltitudeQNHMeters.c  FANSAltitudeQNHMeters.h  FANSAltitudeRestriction.h  (+170 more)
libacars/src/libacars/asn1/patches/: asn1_output_to_vstring.diff  print_choice_names.diff
libogg-1.3.3/: Makefile.in  aclocal.m4  configure
udptextserver/: license.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udptextserver.pro
(+88 files in other folders)
